# synthflow

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  seed_demo_workflows.py  seed_dev_user.py
backend/alembic/: env.py
backend/alembic/versions/: 020c681594a6_add_encrypted_openai_key_to_users.py  cca092aa3c63_create_initial_tables.py  e75939a47db1_add_refresh_tokens_table.py
backend/app/: main.py
backend/app/core/: auth.py  config.py  dag.py  database.py  dependencies.py  encryption.py  exceptions.py  execution_context.py  logging.py  plans.py  pubsub.py  rate_limiter.py  retry.py  timeout.py
backend/app/core/executors/: __init__.py  action_executor.py  ai_executor.py  base.py  trigger_executor.py
backend/app/core/llm/: __init__.py  base.py  ollama_provider.py  openai_provider.py
backend/app/models/: __init__.py  base.py  node_execution_log.py  refresh_token.py  usage_record.py  user.py  workflow.py  workflow_run.py
backend/app/routers/: artifacts.py  auth.py  billing.py  executions.py  settings.py  webhooks.py  workflows.py  ws.py
backend/app/schemas/: auth.py  billing.py  execution.py  settings.py  workflow.py
backend/app/services/: auth_service.py  execution_service.py  storage_service.py  stripe_service.py  usage_service.py  usage_service_sync.py  workflow_service.py
backend/app/worker/: __init__.py  beat_tasks.py  celery_app.py  database.py  tasks.py
frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
infra/: .env.production.example  (+2 more)
(+43 files in other folders)
