[project]
name = "synthflow-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "NishchithRao",email = "nishchithraopr@gmail.com"}
]
requires-python = ">=3.11,<=3.14"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "sqlalchemy[asyncio] (>=2.0.46,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic-settings (>=2.13.0,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "celery[redis] (>=5.6.2,<6.0.0)",
    "boto3 (>=1.42.50,<2.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "stripe (>=14.3.0,<15.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.15.1,<0.16.0)",
    "black (>=26.1.0,<27.0.0)"
]
